# nmea_simulator

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  LICENSE  README.md  run.sh
config/: example_config.toml
docs/: DEVELOPMENT.md
lib/: CMakeLists.txt
src/: config.cpp  config.hpp  main.cpp
